--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.ycombinator.com/hacker-news-highlights-april-may-2018/">Hacker News Highlights: April and May 2018</a>
+                                    <a href="https://www.reddit.com/r/privacy/comments/8ps94a/it_appears_reddit_direct_messages_are_being/">Reddit DMs will not reach their destination if they contain certain text</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17268150">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17275401">
                                         
-                                            40 comments
+                                            66 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=craigcannon">craigcannon</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528481245"
+                                            href="https://news.ycombinator.com/user?id=ValentineC">ValentineC</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528583901"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     213 points
                                 </span>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.calcalistech.com/ctech/articles/0,7340,L-3739390,00.html">Tactics of Psy-Group, Black Cube Revealed in Canadian Court Battle</a>
+                                    <a href="https://blog.ycombinator.com/hacker-news-highlights-april-may-2018/">Hacker News Highlights: April and May 2018</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17226900">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17268150">
                                         
-                                            48 comments
+                                            40 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=asafshalev">asafshalev</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528113338"
+                                            href="https://news.ycombinator.com/user?id=craigcannon">craigcannon</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528481245"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     213 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528653603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528654205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
