--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,17 +215,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://linodians.com/blog/linodes-get-storage-bump/?hn">Linode Bumps SSD Storage Across All Plans (for Free)</a>
+                                    <a href="https://www.youtube.com/watch?v=3LVeEjsn8Ts">John Hennessy and David Patterson Turing Award Lecture</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17274181">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17275033">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=felicianotech">felicianotech</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528567656"
+                                            href="https://news.ycombinator.com/user?id=ychen306">ychen306</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528578840"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     5 points
                                 </span>
@@ -369,7 +369,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528653603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528654205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
