--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,17 +215,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://tools.google.com/dlpage/gaoptout">Google Analytics Opt-Out Browser Add-On</a>
+                                    <a href="https://taimur.me/netflix/">Netflix-onomics</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277829">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17277923">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=koolba">koolba</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528634266"
+                                            href="https://news.ycombinator.com/user?id=refrigerator">refrigerator</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528635887"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     3 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528655406" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528656003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
