--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,6 +215,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://sod.pixlab.io/c_api/sod_realnet_train_start.html">CPU capable ML models training with the SOD embedded library</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17275981">
+                                        
+                                            comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=symisc_devel">symisc_devel</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528594979"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    4 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://www.youtube.com/watch?v=3LVeEjsn8Ts">John Hennessy and David Patterson Turing Award Lecture</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -369,7 +393,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528656003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528656603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
