--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.amasad.me/github">GitHub and Open-Source Is a Boon for the Underprivileged</a>
+                                    <a href="https://godotengine.org/article/godot-gets-brand-new-animation-editor-cinematic-support">Godot gets a brand new animation editor with cinematic support</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277018">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17261572">
                                         
-                                            148 comments
+                                            45 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=amasad">amasad</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528615562"
+                                            href="https://news.ycombinator.com/user?id=doppp">doppp</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528417708"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    254 points
+                                    256 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528658404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528659003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
