--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
+                                    <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
                                 </span>
                             </td>
                         </tr>
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17276738" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://send.rest/">https://send.rest "API to send notifications"</a>
+                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
                                 </span>
                             </td>
                         </tr>
@@ -221,13 +221,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17277199">
                                         
-                                            38 comments
+                                            41 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=anuraag2601">anuraag2601</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528620248"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    100 points
+                                    102 points
                                 </span>
                             </td>
                         </tr>
@@ -245,13 +245,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17279702">
                                         
-                                            16 comments
+                                            17 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ebursztein">ebursztein</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528658019"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    95 points
+                                    101 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528666806" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528667405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
