--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
+                                    <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
                                 </span>
                             </td>
                         </tr>
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17276738" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://send.rest/">https://send.rest "API to send notifications"</a>
+                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
                                 </span>
                             </td>
                         </tr>
@@ -317,13 +317,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17277830">
                                         
-                                            172 comments
+                                            174 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=buserror">buserror</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528634288"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    504 points
+                                    509 points
                                 </span>
                             </td>
                         </tr>
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=Cmerlyn">Cmerlyn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528602429"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    295 points
+                                    296 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528666806" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528667405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
