--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
+                                    <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
                                 </span>
                             </td>
                         </tr>
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17276738" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://send.rest/">https://send.rest "API to send notifications"</a>
+                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17275742">
                                         
-                                            237 comments
+                                            238 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tzhenghao">tzhenghao</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528666806" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528667405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
