--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.eetimes.com/document.asp?doc_id=1333366&_mc=RSS_EET_EDT">Arm Sells Stake in China JV as EU Warns of Unfair Practice – EE Times</a>
+                                    <a href="https://medium.com/@boltmick1/dependency-injection-in-go-99b09e2cc480">Dependency Injection in Go</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277929">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17275906">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528635976"
+                                            href="https://news.ycombinator.com/user?id=bullian">bullian</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528593484"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    3 points
+                                    7 points
                                 </span>
                             </td>
                         </tr>
@@ -441,7 +441,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528669204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528669804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
