--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/platform/amp/2018/6/5/17424770/asus-zenbook-pro-screenpad-specs-release-date-price-computex-2018">Asus replaced the touchpad on its new ZenBook Pro with a 5.5-inch touchscreen</a>
+                                    <a href="https://story.californiasunday.com/infosys-india-tech">The end of India’s ‘IT miracle’?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271126">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252947">
                                         
-                                            213 comments
+                                            401 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528510212"
+                                            href="https://news.ycombinator.com/user?id=fourmii">fourmii</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528340858"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    294 points
+                                    295 points
                                 </span>
                             </td>
                         </tr>
@@ -317,7 +317,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17263565">
                                         
-                                            312 comments
+                                            313 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528669804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528670404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
