--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17276738" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
+                                    <a href="https://send.rest/">https://send.rest "API to send notifications"</a>
                                 </span>
                             </td>
                         </tr>
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17261042" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/mattdesl/jsconfeu-generative-visuals">Source Code for JSConfEU WebGL Visuals</a>
+                                    <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
                                 </span>
                             </td>
                         </tr>
@@ -441,7 +441,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528670404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528671003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
