--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -99,9 +99,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
+                                    <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
                                 </span>
                             </td>
                         </tr>
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
+                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
                                 </span>
                             </td>
                         </tr>
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.kaspersky.com/blog/encrypted-usb-drives-audit/17948/">Is your encrypted USB drive secure?</a>
+                                    <a href="http://vmssoftware.com/updates_port.html">Amd64 port of VMS hits first milestone</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277144">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17278199">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=inertial">inertial</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528619040"
+                                            href="https://news.ycombinator.com/user?id=zdw">zdw</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528640038"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    5 points
+                                    3 points
                                 </span>
                             </td>
                         </tr>
@@ -441,7 +441,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528671003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528671603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
