--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -365,7 +365,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17278224">
                                         
-                                            40 comments
+                                            41 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mwsherman">mwsherman</a></strong> &nbsp;•&nbsp;
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.zdnet.com/article/mark-shuttleworth-dishes-on-where-canonical-and-ubuntu-linux-are-going-next/#ftag=RSSbaffb68">​Mark Shuttleworth on where Canonical and Ubuntu Linux are going next</a>
+                                    <a href="https://webkul.github.io/vivid/">Open Source SVG Icons Library – Vivid.js</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17270161">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280011">
                                         
-                                            58 comments
+                                            17 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=severine">severine</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528495992"
+                                            href="https://news.ycombinator.com/user?id=nitishkmrk">nitishkmrk</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528662748"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    69 points
+                                    71 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528674606" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528675203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
