--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -269,13 +269,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17277199">
                                         
-                                            45 comments
+                                            46 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=anuraag2601">anuraag2601</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528620248"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    115 points
+                                    117 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://jakob.space/blog/post/First+Impressions+of+the+Rust+Programming+Language">First Impressions of the Rust Programming Language</a>
+                                    <a href="https://www.wsj.com/video/spying-high-a-rare-trip-in-america-u-2-spy-plane/3CB35386-FE9E-4DF7-8B1C-8074FB4E026E.html">Inside America's U-2 Spyplane [video]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271131">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17274907">
                                         
-                                            39 comments
+                                            29 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dailymorn">dailymorn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528510260"
+                                            href="https://news.ycombinator.com/user?id=philip1209">philip1209</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528577353"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    97 points
+                                    99 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528675203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528675803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
