--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://polyaxon.com/">Polyaxon – An open source platform for reproducible machine learning at scale</a>
+                                    <a href="http://jakob.space/blog/post/First+Impressions+of+the+Rust+Programming+Language">First Impressions of the Rust Programming Language</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17276509">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271131">
                                         
-                                            20 comments
+                                            39 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528604691"
+                                            href="https://news.ycombinator.com/user?id=dailymorn">dailymorn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528510260"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    96 points
+                                    97 points
                                 </span>
                             </td>
                         </tr>
@@ -239,17 +239,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/video/spying-high-a-rare-trip-in-america-u-2-spy-plane/3CB35386-FE9E-4DF7-8B1C-8074FB4E026E.html">Inside America's U-2 Spyplane [video]</a>
+                                    <a href="https://polyaxon.com/">Polyaxon – An open source platform for reproducible machine learning at scale</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17274907">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17276509">
                                         
-                                            29 comments
+                                            20 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=philip1209">philip1209</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528577353"
+                                            href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528604691"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     96 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528675203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528675803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
