--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://restoreprivacy.com/google-alternatives/">Alternatives to Google Products</a>
+                                    <a href="https://blog.insightdatascience.com/reinforcement-learning-from-scratch-819b65f074d8">Reinforcement Learning from scratch</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280558">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17257143">
                                         
-                                            105 comments
+                                            25 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wuschel">wuschel</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528670227"
+                                            href="https://news.ycombinator.com/user?id=e_ameisen">e_ameisen</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528387842"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    216 points
+                                    219 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528687205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528687803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
