--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/platform/amp/2018/6/5/17424770/asus-zenbook-pro-screenpad-specs-release-date-price-computex-2018">Asus replaced the touchpad on its new ZenBook Pro with a 5.5-inch touchscreen</a>
+                                    <a href="https://restoreprivacy.com/google-alternatives/">Alternatives to Google Products</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271126">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280558">
                                         
-                                            214 comments
+                                            157 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528510212"
+                                            href="https://news.ycombinator.com/user?id=wuschel">wuschel</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528670227"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    297 points
+                                    301 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528692605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528693204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
