--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528570440"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    231 points
+                                    232 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://monkeylearn.com/blog/getting-started-in-natural-language-processing-nlp/">Getting Started in Natural Language Processing</a>
+                                    <a href="https://elie.net/blog/ai/attacks-against-machine-learning-an-overview">Attacks against machine learning – an overview</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265593">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17279702">
                                         
-                                            37 comments
+                                            47 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wordvector">wordvector</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528467439"
+                                            href="https://news.ycombinator.com/user?id=ebursztein">ebursztein</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528658019"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    195 points
+                                    197 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528693204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528693805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
