--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://elie.net/blog/ai/attacks-against-machine-learning-an-overview">Attacks against machine learning – an overview</a>
+                                    <a href="https://monkeylearn.com/blog/getting-started-in-natural-language-processing-nlp/">Getting Started in Natural Language Processing</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17279702">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265593">
                                         
-                                            47 comments
+                                            37 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ebursztein">ebursztein</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528658019"
+                                            href="https://news.ycombinator.com/user?id=wordvector">wordvector</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528467439"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    194 points
+                                    195 points
                                 </span>
                             </td>
                         </tr>
@@ -533,7 +533,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17275742">
                                         
-                                            259 comments
+                                            260 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tzhenghao">tzhenghao</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528693204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528693805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
