--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.figure-eight.com/building-the-software-2-0-stack-by-andrej-karpathy-from-tesla/">Building the Software 2.0 Stack by Andrej Karpathy [video]</a>
+                                    <a href="https://www.youtube.com/watch?v=K4zFefh5T-8">Aerospike Engines: Why aren't we using them now? [video]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280454">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271533">
                                         
-                                            39 comments
+                                            31 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fmihaila">fmihaila</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528668679"
+                                            href="https://news.ycombinator.com/user?id=hinkley">hinkley</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528518362"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    106 points
+                                    107 points
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=PredictorY">PredictorY</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528670647"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    100 points
+                                    103 points
                                 </span>
                             </td>
                         </tr>
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528644340"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    97 points
+                                    98 points
                                 </span>
                             </td>
                         </tr>
@@ -389,7 +389,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17271131">
                                         
-                                            39 comments
+                                            40 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dailymorn">dailymorn</a></strong> &nbsp;•&nbsp;
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=sdogruyol">sdogruyol</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528678148"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    85 points
+                                    86 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528695004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528695604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
