--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://joelcalifa.com/blog/tiny-wins/">Tiny Wins</a>
+                                    <a href="https://eng.uber.com/mysql-migration/">Why Uber Engineering Switched from Postgres to MySQL (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17281563">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17279687">
                                         
-                                            1 comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bemmu">bemmu</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528688190"
+                                            href="https://news.ycombinator.com/user?id=kiyanwang">kiyanwang</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528657853"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    3 points
+                                    14 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528696205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528696804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
