--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17276738" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279322" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://send.rest/">https://send.rest "API to send notifications"</a>
+                                    <a href="https://seedlang.com/">I am bootstrapping a video-based Duolingo competitor</a>
                                 </span>
                             </td>
                         </tr>
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://forestry.io/blog/for-static-sites-theres-no-excuse-not-to-use-a-cdn/">For Static Sites, There’s No Excuse Not to Use a CDN</a>
+                                    <a href="https://arxiv.org/abs/1805.12177">Why do CNNs generalize so poorly to small image transformations?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17266006">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17278735">
                                         
-                                            73 comments
+                                            27 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dwalkr">dwalkr</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528469714"
+                                            href="https://news.ycombinator.com/user?id=mathattack">mathattack</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528646823"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     123 points
                                 </span>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://arxiv.org/abs/1805.12177">Why do CNNs generalize so poorly to small image transformations?</a>
+                                    <a href="http://legacy.earlham.edu/~mileske/Files/Kant%27s%20An%20Answer%20to%20the%20Question%20What%20is%20Enlightenment.htm">What is Enlightenment? (1784)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17278735">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17277199">
                                         
-                                            27 comments
+                                            48 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mathattack">mathattack</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528646823"
+                                            href="https://news.ycombinator.com/user?id=anuraag2601">anuraag2601</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528620248"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    122 points
+                                    123 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528699804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528700404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
