--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17276738" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279322" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://send.rest/">https://send.rest "API to send notifications"</a>
+                                    <a href="https://seedlang.com/">I am bootstrapping a video-based Duolingo competitor</a>
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528699804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528700404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
