--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17276738" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279322" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://send.rest/">https://send.rest "API to send notifications"</a>
+                                    <a href="https://seedlang.com/">I am bootstrapping a video-based Duolingo competitor</a>
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=swsieber">swsieber</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528464958"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    315 points
+                                    316 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528699804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528700404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
