--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://restoreprivacy.com/google-alternatives/">Alternatives to Google Products</a>
+                                    <a href="https://www.nature.com/articles/d41586-018-05357-w">Sucking carbon dioxide from air is cheaper than scientists thought</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280558">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17260500">
                                         
-                                            256 comments
+                                            279 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wuschel">wuschel</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528670227"
+                                            href="https://news.ycombinator.com/user?id=kjeetgill">kjeetgill</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528407338"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    518 points
+                                    526 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528705205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528705804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
