--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=swsieber">swsieber</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528464958"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    316 points
+                                    317 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528403228"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    312 points
+                                    313 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.gnu.org/philosophy/open-source-misses-the-point.en.html">Why Open Source Misses the Point of Free Software (2016)</a>
+                                    <a href="https://ipfs.io/ipfs/QmNURh26yenpqK5hK3ahRZhQJsaUttumepjtRWiVZXhnN1/p/webrtc-ipfs-chat.html">WebRTC Chat on IPFS</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17230785">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17263589">
                                         
-                                            213 comments
+                                            85 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pera">pera</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528137811"
+                                            href="https://news.ycombinator.com/user?id=david4096">david4096</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528446367"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     293 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528705205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528705804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
