--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=fmihaila">fmihaila</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528668679"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    162 points
+                                    163 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/dgwozdz/HN_SO_analysis">Popularity of technology on Stack Overflow and Hacker News: Causality Analysis</a>
+                                    <a href="https://www.youtube.com/watch?v=wSdV1M7n4gQ">Anders Hejlsberg on Modern Compiler Construction (2016) [video]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277550">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280589">
                                         
-                                            57 comments
+                                            19 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=l____">l____</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528628221"
+                                            href="https://news.ycombinator.com/user?id=PredictorY">PredictorY</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528670647"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    145 points
+                                    146 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528713004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528713604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
