--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.shh.mpg.de/979007/oldest-bubonic-plaque">Oldest bubonic plague genome decoded</a>
+                                    <a href="https://github.com/ahylton19/TAV">AI and Robotics (with Raspberry Pi)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280313">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17281734">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528666973"
+                                            href="https://news.ycombinator.com/user?id=ahytlon19">ahytlon19</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528690574"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    6 points
+                                    3 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528713604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528714206" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
